# mandelbrot_avx

./: .gitignore  CMakeLists.txt  main.cpp  mandelbrot.cpp  mandelbrot.hpp  util.cpp  util.hpp
